# OmniHub

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  AGENTS.md  CLAUDE.md  LICENSE  README.md  claude.md  omnihub-generate-job  omnihub-index  omnihub-process  omnihub-run  omnihub-sweep  pyproject.toml  requirements.txt
apptainer/: README.md  hpcfund-build-deploy-sif.sh  omnihub-ubuntu-dev-mpi.def  omnihub-ubuntu-dev-torchrun.def  omnihub-ubuntu-dev.def  radha-build-deploy-sif.sh
config/: frontier.yaml  hpcfund.yaml  job.template  radha.yaml
docker/: Dockerfile  Dockerfile-ubuntu-dev  build-docker-ubuntu-dev.sh  docker-compose.yml  fix-host-owner.sh  radha-build-image.sh  radha-deploy-image.sh  requirements.txt  run-docker-ubuntu-dev.sh
docs/: developer.md  generate-job-examples.md  images.md  models.md  primus-multinode-apptainer-findings.md  primus-pip-install-orchestration.md
llama-hf/: fine-tune.py  inference.py
scripts/: generate-sysinfo.sh  hf-fine-tune-ddp-mpi.py  hf-fine-tune-ddp-torchrun.py  hf-fine-tune-ddp.py  hf-fine-tune-dist.py  hf-fine-tune.py  hf-inference.py  omnihub-apptainer-env.sh  omnihub-hf.py  sanity-check.sh  sanity_torch_dist.py
slurm/: fine_tune_apptainer_manual.sh  fine_tune_apptainer_mpi.sh  fine_tune_apptainer_torchrun.sh  generate-job  multinode_apptainer.sh  omniperf_fine_tune.sh  omniperf_fine_tune_apptainer.sh  omniperf_fine_tune_apptainer_manual.sh  omniperf_fine_tune_apptainer_mpi.sh  omniperf_inference.sh  omniperf_inference_apptainer_manual.sh  omniperf_inference_apptainer_torchrun.sh  omnistat_fine_tune_apptainer_manual.sh  (+3 more)
(+99 files in other folders)
