[project]
name = "omnihub"
version = "0.1.0"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.scripts]
omnihub-index="omnihub.index.indexer:main"
omnihub-process="omnihub.process.processor:main"
omnihub-run="omnihub.run.runner:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["omnihub"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
developer = [
    "black>=22.6.0",
    "isort>=5.12.0",
    "pre-commit",
]

[tool.isort]
profile = "black"
# skip_gitignore = true
# line_length = 100
